--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "nodemon": "^3.1.9"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "express": "^4.21.2",
     "mongoose": "^8.10.1",
     "validator": "^13.15.15"
