--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,9 @@
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.1",
     "validator": "^13.15.15"
   }
