--- a/backend/package.json
+++ b/backend/package.json
@@ -21,8 +21,10 @@
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "celebrate": "^15.0.3",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.1",
     "validator": "^13.15.15"
