--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "bcryptjs": "^3.0.2",
     "celebrate": "^15.0.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "express-winston": "^4.2.0",
     "joi": "^17.13.3",
